// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    invalid{
      invalid{
</style>

<span><style>
    invalid{
      invalid{
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    invalid{
      invalid{
  </style>

  <span><style>
      invalid{
        invalid{
    </style></span>
</div>
================================================================================
`;

exports[`invalid.hbs - {"htmlWhitespaceSensitivity":"ignore","embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    invalid{
      invalid{
</style>

<span><style>
    invalid{
      invalid{
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    invalid{
      invalid{
  </style>

  <span>
    <style>
      invalid{
        invalid{
    </style>
  </span>
</div>
================================================================================
`;

exports[`invalid.hbs - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    invalid{
      invalid{
</style>

<span><style>
    invalid{
      invalid{
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    invalid{
      invalid{
  </style>

  <span>
    <style>
      invalid{
        invalid{
    </style>
  </span>
</div>
================================================================================
`;

exports[`invalid.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    invalid{
      invalid{
</style>

<span><style>
    invalid{
      invalid{
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    invalid{
      invalid{
  </style>

  <span><style>
      invalid{
        invalid{
    </style></span>
</div>
================================================================================
`;

exports[`test.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    .a {color:    red}
        .b {color:    red}
  </style>

  <span><style>
      .a {color:    red}
          .b {color:    red}
    </style></span>
</div>
================================================================================
`;

exports[`test.hbs - {"htmlWhitespaceSensitivity":"ignore","embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    .a {color:    red}
        .b {color:    red}
  </style>

  <span>
    <style>
      .a {color:    red}
          .b {color:    red}
    </style>
  </span>
</div>
================================================================================
`;

exports[`test.hbs - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    .a {
      color: red;
    }
    .b {
      color: red;
    }
  </style>

  <span>
    <style>
      .a {
        color: red;
      }
      .b {
        color: red;
      }
    </style>
  </span>
</div>
================================================================================
`;

exports[`test.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<style>
    .a {color:    red}
        .b {color:    red}
</style>

<span><style>
    .a {color:    red}
        .b {color:    red}
</style></span>
</div>

=====================================output=====================================
<div>
  <style>
    .a {
      color: red;
    }
    .b {
      color: red;
    }
  </style>

  <span><style>
      .a {
        color: red;
      }
      .b {
        color: red;
      }
    </style></span>
</div>
================================================================================
`;
